--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href=".style.css">
-	<title>GIT</title>
+	<title>to do</title>
+
 </head>
 <body>
-	<script type="text/javascript"src="./main.js"></script>
+
+	<div class="container"></div>
+	
+<script type="text/javascript" src="./main.js"></script>
+
 </body>
 </html>
